--- a/labs-jupyter-spacex-Data wrangling.ipynb
+++ b/labs-jupyter-spacex-Data wrangling.ipynb
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "metadata": {
     "tags": []
    },
@@ -565,7 +565,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {
     "tags": []
    },
@@ -703,17 +703,27 @@
     {
      "data": {
       "text/plain": [
-       "dtype('int64')"
+       "Outcome    \n",
+       "True ASDS      41\n",
+       "None None      19\n",
+       "True RTLS      14\n",
+       "False ASDS      6\n",
+       "True Ocean      5\n",
+       "False Ocean     2\n",
+       "None ASDS       2\n",
+       "False RTLS      1\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# landing_outcomes = values on Outcome column\n",
-    "landing_outcomes = df[['Outcome']].value_counts()"
+    "landing_outcomes = df[['Outcome']].value_counts()\n",
+    "landing_outcomes"
    ]
   },
   {
